Amended the template to display url to my github repo for those that are interested

--- a/published/index.html
+++ b/published/index.html
@@ -38,10 +38,12 @@
 
     John
 
-    P.S. The site is built by generating the page using a mustache template running off 
-    XML data. The CSS is generated using LESS and I have also added some enhancements to
-    the page via Javascript to make your life easier. I have deliberately left the site 
-    unminified and uncompressed so that you could read it easily.
+    P.S. The site is built by generating the page using a mustache and XML data. 
+    The CSS is generated using LESS and I have also added some enhancements to
+    the page via Javascript to make your life easier as you browse the page. 
+    I have deliberately left the site unminified and uncompressed so that you could read it easily.
+    However to view my original CSS you should check my repo with my cv: https://github.com/Jmaharman/CV 
+    basically I don't agree like the way LESS puts each selector on its own line.
 
     Updated: 19/04/2012
     -->
