--- a/published/index.html
+++ b/published/index.html
@@ -616,5 +616,17 @@
     <script type="text/javascript" src="js/lib/backbone.min.js"></script>
     <script type="text/javascript" src="js/views/cvOverview.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-1385081-10']);
+      _gaq.push(['_setDomainName', 'johnharman.co.uk']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
 </body>
 </html>
